# ContextForge

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  learning-log.md  phase-2-comparison.md  project-plan.md
docs/phase-notes/: phase-1.md  phase-2.md  phase-3.md
evals/: phase_1_questions.json  phase_2_questions.json
scripts/: ask.py  ask_langchain.py  compare_manual_vs_langchain.py  compare_retrievers.py  eval_retrieval.py  ingest_repo.py  search.py  search_langchain.py
src/contextforge/: ask.py  chunker.py  config.py  discovery.py  embedder.py  evaluation.py  ingest.py  keyword_retriever.py  langchain_adapters.py  langchain_rag.py  llm.py  loaders.py  models.py  prompt_builder.py  ranking.py  reranker.py  retriever.py  store.py
tests/: test_ask.py  test_ask_langchain_script.py  test_ask_script.py  test_chunker.py  test_compare_manual_vs_langchain_script.py  test_compare_retrievers_script.py  test_discovery.py  test_embedder.py  test_eval_retrieval_script.py  test_evaluation.py  test_ingest.py  test_ingest_repo_script.py  test_keyword_retriever.py  test_langchain_adapters.py  test_langchain_rag.py  test_llm.py  test_loaders.py  test_models.py  test_prompt_builder.py  test_ranking.py  test_reranker.py  test_retriever.py  test_search_langchain_script.py  test_search_script.py  test_store.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/db/: schema.sql
tests/fixtures/sample_repo/docs/: architecture.md
tests/fixtures/sample_repo/notes/: debug.txt
tests/fixtures/sample_repo/src/: parser.py  server.go
