[project]
name = "contextforge"
version = "0.1.0"
description = "A learning-first developer operations RAG system"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "langchain-core>=1.4.8",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services and may consume quota",
]
